# CMakeTemplate

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/example-app/: CMakeLists.txt
apps/example-app/sources/: CMakeLists.txt  main.cc
apps/example-app/sources/greeter/: CMakeLists.txt  greeter.cc  greeter.hh
libs/: CMakeLists.txt
libs/example-library/: CMakeLists.txt
libs/example-library/includes/: cppstring.hh
libs/example-library/sources/: CMakeLists.txt
libs/example-library/sources/cppstring/: CMakeLists.txt  cppstring.cc
