#==============================================================================#
# Add main.cc to build
#==============================================================================#
target_sources(CMakeTemplate_example-app
    PRIVATE
        main.cc
)

#==============================================================================#
# Add logically grouped subfolders containing source files.
#==============================================================================#
add_subdirectory(greeter)
